k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
  labels:
    app: rails
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rails
  type: NodePort
