k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rails-ingress
  labels:
    app: rails
spec:
  backend:
    serviceName: rails-service
    servicePort: 80
